--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       </div>
     </div>
 
-    <script src="splitPot.js"></script>
+<!--     <script src="splitPot.js"></script> -->
     <script>
       function createPlayerCard() {
         const div = document.createElement('div');
